--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,6 +56,8 @@
 		</array>
 	</dict>
 </array>
+<key>NSAppleMusicUsageDescription</key>
+<string>Explain why your app uses music</string>
 <!-- End of the Google Sign-in Section -->
 </dict>
 </plist>
