--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_riverpod: ^2.5.1
   fpdart: ^1.1.0
   routemaster: ^1.0.1
+  dotted_border: ^2.1.0
+  shared_preferences: ^2.2.3
+  file_picker: ^8.0.5
 
 dev_dependencies:
   flutter_test:
